initial get users impl
