# internal/entities/pageInfo.go
@@ -2,7 +2,5 @@ package entities
 
 type PageInfo struct {
 	NextPageToken string `json:"next_page_token"`
-	PageSize      int32  `json:"page_size"`
-	SortBy        string `json:"sort_by"`
-	Descending    bool   `json:"descending"`
+	PageSize      int    `json:"page_size"`
 }
